# english-memory-agent

./: .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  agents-cli-manifest.yaml  app.py  deployment_metadata.json  pyproject.toml
deployment/terraform/single-project/: service.tf  variables.tf
deployment/terraform/single-project/vars/: env.tfvars
docs/: architecture.md  mcp_server.md  security.md
english_memory_agent/: agent.py  agent_runtime_app.py  fast_api_app.py
english_memory_agent/agents/: __init__.py  prompts.py  root_agent.py  schemas.py
english_memory_agent/app_utils/: __init__.py  telemetry.py  typing.py
english_memory_agent/database/: db.py  schema.sql
english_memory_agent/tools/: __init__.py  memory_tools.py  privacy_tools.py  review_tools.py
examples/: demo_inputs.md  demo_outputs.md
mcp_server/: memory_mcp_server.py
tests/integration/: test_agent.py  test_agent_runtime_app.py
tests/unit/: test_memory_tools.py  test_privacy_tools.py
