[project]
name = "english-memory-agent"
version = "0.1.0"
description = "A personal English learning concierge agent"
authors = [
    {name = "Waley"},
    {name = "wacoxu"},
]
dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "streamlit>=1.35.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "gcsfs>=2024.11.0",
    "google-cloud-aiplatform[agent-engines,evaluation]>=1.156.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "protobuf>=6.31.1,<7.0.0",
]
requires-python = ">=3.11,<3.14"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["english_memory_agent"]

